--- a/src/P11-Front/src/index.css
+++ b/src/P11-Front/src/index.css
@@ -2,4 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  max-width: none;
+}
+
+body {
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
