finished home page integration in react

--- a/src/P11-Front/src/index.css
+++ b/src/P11-Front/src/index.css
@@ -2,7 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+}
+
+#root {
   max-width: none;
+  padding: 0;
 }
 
 body {
