--- a/src/P11-Front/src/pages/user/user.css
+++ b/src/P11-Front/src/pages/user/user.css
@@ -109,3 +109,18 @@ body {
     width: 200px;
   }
 }
+
+.name_form--container {
+  width: 200px;
+  height: 110px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.name_form--container button {
+  margin-top: 10px;
+}
